--- a/css/style.css
+++ b/css/style.css
@@ -8136,11 +8136,21 @@ body.privacy #privacy .date {
   max-width: 100%;
 }
 
+.documents {
+  margin-left: -30px;
+  font-weight: bold;
+}
+
 @media screen and (max-width: 540px) {
   .sd[data-s-66e79102-d48d-4f27-af99-63691f06376f] {
     margin: 0px 0px 30px 0px;
     width: 100%;
     max-width: 100%;
+  }
+
+  .documents {
+    margin-left: 0px;
+    font-weight: normal;
   }
 }
 
