--- a/css/service.css
+++ b/css/service.css
@@ -6359,6 +6359,11 @@ a:not([class]) {
   color: currentColor;
 }
 
+.tokium_reason .tokium_reason_flex .reason_flex.bottom {
+  margin-top: 50px;
+  border-top: inherit !important;
+}
+
 .document a {
   font-weight: bold;
   letter-spacing: 1px;
@@ -6369,6 +6374,19 @@ a:not([class]) {
   border-radius: 30px;
   color: #1d646d;
   margin-left: -35px;
+}
+
+.tokium_reason .tokium_reason_flex .reason_flex .reason_item .reason_subheading .reason_no {
+  font-size: 58px;
+  color: #008D97;
+  font-family: 'Noto Sans JP' !important;
+  white-space: nowrap;
+  border-bottom: solid 2px #008D97;
+  font-weight: 500;
+  line-height: 1.2;
+  position: absolute;
+  top: -8px;
+  left: 0;
 }
 
 a {
@@ -6407,6 +6425,15 @@ a {
 
 .tb_btm_t {
   padding-top: 20px;
+}
+
+.cta_font {
+  text-align: center;
+  margin: 0 auto 100px;
+  font-size: 32px;
+  width: fit-content;
+  letter-spacing: 2px;
+  font-weight: bold;
 }
 
 @media screen and (min-width: 769px) {
@@ -6554,5 +6581,176 @@ a {
     width: 60px;
     background-position: 18px center;
     background-size: 29px 28px;
+  }
+}
+
+header .header-wrap .block-nav nav ul li a {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: 0.06em;
+}
+
+
+article {
+  margin-top: 72px;
+  position: relative;
+  font-size: 16px;
+}
+
+
+section.top_problem .block {
+  width: 100%;
+  max-width: none;
+}
+
+.tx_center {
+  text-align: center;
+}
+
+.block {
+  width: 87.5%;
+  max-width: 960px;
+  margin: auto;
+  display: block;
+  overflow: hidden;
+}
+
+.red {
+  color: #1D646D;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.content_margin {
+  margin-bottom: 24px;
+}
+
+.top_problem_title {
+  font-size: 40px;
+}
+
+.problem_block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 87.5%;
+  max-width: 960px;
+  margin: auto;
+}
+
+.problem_item {
+  margin-bottom: 25px !important;
+}
+
+.problem_item {
+  width: 368px;
+  height: 136px;
+  margin: 0 15px;
+  background-color: #1D646D;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.problem_border_left {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 17px;
+  height: 136px;
+  background: -webkit-linear-gradient(-225deg, #fff 8.5px, transparent 0), -webkit-linear-gradient(-135deg, #FFF 8.5px, #1D646D 0);
+  background: -moz-linear-gradient(-225deg, #fff 8.5px, transparent 0), -moz-linear-gradient(-135deg, #fff 8.5px, #ff0000 0);
+  background: -o-linear-gradient(-225deg, #fff 8.5px, transparent 0), -o-linear-gradient(-135deg, #fff 8.5px, #ff0000 0);
+  background: -ms-linear-gradient(-225deg, #fff 8.5px, transparent 0), -ms-linear-gradient(-135deg, #fff 8.5px, #ff0000 0);
+  background: linear-gradient(-225deg, #fff 8.5px, transparent 0), linear-gradient(45deg, #fff 8.5px, #1D646D 0);
+  -webkit-background-size: 17px 17px;
+  -moz-background-size: 17px 17px;
+  background-size: 17px 17px;
+  background-repeat: repeat-y;
+}
+
+.problem_text01 {
+  font-size: 24px;
+}
+
+.lineheight {
+  line-height: 1.25;
+}
+
+.white {
+  color: #fff;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.problem_border_right {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 17px;
+  height: 136px;
+  background: -webkit-linear-gradient(225deg, #fff 8.5px, transparent 0), -webkit-linear-gradient(135deg, #fff 8.5px, #1D646D 0);
+  background: -moz-linear-gradient(225deg, #fff 8.5px, transparent 0), -moz-linear-gradient(135deg, #fff 8.5px, #ff0000 0);
+  background: -o-linear-gradient(225deg, #fff 8.5px, transparent 0), -o-linear-gradient(135deg, #fff 8.5px, #ff0000 0);
+  background: -ms-linear-gradient(225deg, #fff 8.5px, transparent 0), -ms-linear-gradient(135deg, #fff 8.5px, #ff0000 0);
+  background: linear-gradient(225deg, #fff 8.5px, transparent 0), linear-gradient(-45deg, #fff 8.5px, #1D646D 0);
+  -webkit-background-size: 17px 17px;
+  -moz-background-size: 17px 17px;
+  background-size: 17px 17px;
+  background-repeat: repeat-y;
+}
+
+.red.top_problem_title.bold.content_margin {
+  text-align: center;
+  margin: 0 auto;
+  padding-bottom: 60px;
+  padding-top: 78px;
+}
+
+
+
+@media screen and (max-width: 720px) {
+  .top_problem_title {
+    font-size: 24px;
+    line-height: 1.25;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .problem_text01 {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  article {
+    margin-top: 70px;
+  }
+
+  .red.top_problem_title.bold.content_margin {
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 60px;
+    padding-top: 0px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .red.top_problem_title.bold.content_margin {
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 30px;
+    padding-top: 0px;
   }
 }
