--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -947,6 +947,11 @@ body>main>section.cont6>div>div:nth-child(2)>div.wrap>div {
   width: fit-content;
 }
 
+.tokium_reason .tokium_reason_flex {
+  max-width: 1243px;
+  margin: 60px auto 0 auto !important;
+}
+
 .cont7 .item {
   display: grid;
   grid-template-columns: 0.5fr 1.5fr;
@@ -1076,20 +1081,355 @@ body>main>section.cont7>div>div>div:nth-child(4)>figure::after {
     display: none;
   }
 
-}
+  .mv .mv_inner .flex .left h1 {
+    position: absolute;
+    z-index: 2;
+    left: 2%;
+    top: 36%;
+    text-align: center;
+    color: #fff;
+    font-size: 4vw;
+    text-shadow: 0px 0px 10px rgba(29, 100, 109, 0.91), 0px 0px 10px rgba(29, 100, 109, 0.91);
+    transform: translateY(-50%);
+    display: grid;
+  }
 
+  .mv .mv_inner .taglist {
+    position: absolute;
+    bottom: 0%;
+    z-index: 1;
+    display: list-item;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    width: 100%;
+    left: 0px;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+    gap: 1.5vw;
+  }
 
+  .mv .mv_inner .taglist li {
+    background: rgba(999, 999, 999, 0.7);
+    border: solid 2px #1d646d;
+    border-radius: 50px;
+    padding: 7px;
+    font-size: 13px;
+    margin-bottom: 10px;
+  }
 
+  .mv .mv_inner .flex .left p {
+    position: absolute;
+    z-index: 2;
+    top: 52%;
+    font-size: 4vw;
+    font-weight: bold;
+    left: 3%;
+  }
 
+  .pc {
+    display: none !important;
+  }
 
+  .tokium_reason .tokium_reason_flex {
+    max-width: 1243px;
+    margin: 30px auto 0 auto !important;
+  }
 
+  .tokium_reason .tokium_reason_flex .reason_flex.top .reason_item,
+  .tokium_reason .tokium_reason_flex .reason_flex.bottom .reason_item {
+    max-width: 500px;
+    width: 100%;
+    margin: 0 auto 10px auto !important;
+    padding: 0;
+  }
 
+  .p-main__resolution {
+    width: 100%;
+    padding: 1px 0;
+    background: linear-gradient(101.07deg, #f5f5f5 0%, #f5f5f5 100%);
+  }
 
+  .sectionTitle .sectionTitle__title--left,
+  .sectionTitle .sectionTitle__title {
+    font-family: YakuHanJP, ryo-gothic-plusn, sans-serif;
+    position: relative;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 160%;
+    letter-spacing: .1em;
+    white-space: nowrap;
+    padding-bottom: 30px;
+  }
 
+  .p-main__resolution .p-main__resolution-sub .p-main__resolution-card-box .p-main__resolution-card-block .p-main__resolution-card-img-box .p-main__resolution-card-img01 {
+    width: 111px;
+  }
 
+  .p-main__resolution .p-main__resolution-sub .p-main__resolution-card-box .p-main__resolution-card-block .p-main__resolution-card-img-box .p-main__resolution-card-img02 {
+    width: 111px;
+  }
 
+  .p-main__resolution .p-main__resolution-sub .p-main__resolution-card-box .p-main__resolution-card-block .p-main__resolution-card-img-box .p-main__resolution-card-img03 {
+    width: 111px;
+  }
 
-.tokium_reason .tokium_reason_flex {
-  max-width: 1243px;
-  margin: 60px auto 0 auto !important;
+  .p-main__resolution .p-main__resolution-sub .p-main__resolution-card-box .p-main__resolution-card-block .p-main__resolution-card-img-box .p-main__resolution-card-img04 {
+    width: 111px;
+  }
+
+  .p-main__resolution .p-main__resolution-sub .p-main__resolution-card-box .p-main__resolution-card-block .p-main__resolution-card-img-box .p-main__resolution-card-img05 {
+    width: 111px;
+  }
+
+  .p-main__resolution .p-main__resolution-sub .p-main__resolution-card-box .p-main__resolution-card-block .p-main__resolution-card-img-box .p-main__resolution-card-img06 {
+    width: 111px;
+  }
+
+  .p-main__resolution .p-main__resolution-sub .p-main__resolution-card-box .p-main__resolution-card-block .p-main__resolution-card-title {
+    font-size: 1.6rem;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    line-height: 30px;
+    padding: 0 20px 10px 20px;
+  }
+
+  .p-main__resolution .p-main__resolution-sub .p-main__resolution-card-box .p-main__resolution-card-block {
+    width: 100%;
+    height: auto;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.06);
+    border-radius: 21px;
+  }
+
+  .p-main__resolution .p-main__resolution-sub .p-main__resolution-sub-title-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 22px;
+  }
+
+  .p-main__resolution .p-main__resolution-sub .p-main__resolution-card-box {
+    display: grid;
+    margin: 0 11px;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    padding-bottom: 30px;
+  }
+
+  .cont7 {
+    background-color: #f2f7f2;
+    padding: 70px 0;
+  }
+
+  .cont7 h2 {
+    margin: 0 auto;
+    width: fit-content;
+    font-family: YakuHanJP, ryo-gothic-plusn, sans-serif;
+    position: relative;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 160%;
+    letter-spacing: .1em;
+    white-space: nowrap;
+  }
+
+  .inner {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0px 0px 0px 0px;
+  }
+
+  .cont7 .item {
+    display: flow;
+    grid-template-columns: 0.5fr 1.5fr;
+    margin-bottom: 0px;
+    position: relative;
+    gap: 50px;
+    padding-top: 30px;
+  }
+
+  .cont7 .item figure::after {
+    position: initial;
+    content: initial;
+    height: initial;
+    width: initial;
+    background-size: initial;
+    display: initial;
+    left: initial;
+    border-top: initial;
+    transform: initial;
+    z-index: initial;
+  }
+
+  figure img {
+    width: 200px;
+    margin: 0 auto;
+  }
+
+  .cont7 .list {
+    width: 90%;
+    margin: 0px auto;
+  }
+
+  .cont9 {
+    padding: 70px 0 100px 0;
+  }
+
+  .table_wrap {
+    padding: 0px 16px;
+  }
+
+  .tb_btm_t {
+    padding-top: 20px;
+    padding: 20px;
+  }
+
+  .inner li {
+    z-index: 1;
+    padding: 0 20px;
+  }
+
+  .cta {
+    background: #1d646d;
+    padding: 60px 20px;
+    position: relative;
+  }
+
+  .cta .inner {
+    background: #fff;
+    padding: 70px 12px 20px 12px;
+    border-radius: 30px;
+  }
+
+  .cta ul {
+    display: flow;
+    gap: 30px;
+    align-items: center;
+    width: 100%;
+    margin: 60px auto 10px;
+    justify-content: center;
+  }
+
+  .links li {
+    z-index: 1;
+    padding: 0px;
+    margin-bottom: 50px;
+  }
+
+  .cta ul li a {
+    font-weight: bold;
+    letter-spacing: 1px;
+    background: #fff;
+    border: solid 2px #1d646d;
+    padding: 15px 33px 10px 30px;
+    position: relative;
+    border-radius: 30px;
+    color: #1d646d;
+    font-size: 22px;
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+
+  .cta ul li a span {
+    position: absolute;
+    top: -50%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    width: 78%;
+    text-align: center;
+    background: #fff;
+    border-radius: 30px;
+    border: solid 2px;
+    padding: 5px 30px;
+    font-size: 14px;
+  }
+
+  .cta ul li a:after {
+    content: '';
+    position: absolute;
+    right: 5vw;
+    top: 50%;
+    width: 10px;
+    height: 10px;
+    border-right: 2px solid #1d646d;
+    border-bottom: 2px solid #1d646d;
+    transform: translateY(-50%) rotate(-45deg);
+  }
+
+  .cta:after {
+    background-image: url(../images/cta_symbol_r.png);
+    width: 200px;
+    height: 400px;
+    bottom: -47%;
+    right: 0;
+  }
+
+  .task {
+    margin-top: 0px;
+    padding-top: 100px;
+    background: #F2F7F2;
+    border-radius: 15px;
+  }
+
+  .sectionTitle .sectionTitle__title--left,
+  .sectionTitle .sectionTitle__title {
+    font-family: YakuHanJP, ryo-gothic-plusn, sans-serif;
+    position: relative;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 160%;
+    letter-spacing: .1em;
+    white-space: nowrap;
+  }
+
+  .task-list {
+    margin-top: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: space-between;
+    justify-content: center;
+    padding-bottom: 40px;
+  }
+
+  .task-list li {
+    display: flex;
+    align-items: center;
+    position: relative;
+    background-color: #fff;
+    border-radius: 15px;
+    min-height: 60px;
+    font-size: 1.5rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+    width: 100%;
+    margin: 0 20px;
+    text-align: justify;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+    padding-left: 85px;
+  }
+
+  .task-list li::before {
+    position: absolute;
+    top: 0px;
+    left: 0;
+    display: block;
+    height: 100%;
+    background: #028D97 url(../../images/ico_check.png) no-repeat;
+    border-radius: 15px 0 0 15px;
+    content: "";
+    width: 15%;
+  }
+
+  .task-list li::before {
+    width: 60px;
+    background-position: 18px center;
+    background-size: 29px 28px;
+  }
 }
