--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ a {
   position: absolute;
   z-index: 2;
   left: 10%;
-  top: 45%;
+  top: 44%;
   text-align: center;
   color: #fff;
   font-size: 2.8vw;
@@ -1431,5 +1431,25 @@ body>main>section.cont7>div>div>div:nth-child(4)>figure::after {
     width: 60px;
     background-position: 18px center;
     background-size: 29px 28px;
+  }
+}
+
+/* パソコンで見たときは"pc"のclassがついた画像が表示される */
+.pc {
+  display: block !important;
+}
+
+.sp {
+  display: none !important;
+}
+
+/* スマートフォンで見たときは"sp"のclassがついた画像が表示される */
+@media only screen and (max-width: 750px) {
+  .pc {
+    display: none !important;
+  }
+
+  .sp {
+    display: block !important;
   }
 }
