--- a/css/service.css
+++ b/css/service.css
@@ -1425,7 +1425,7 @@ body {
   .p-main__resolution .p-main__resolution-sub .p-main__resolution-card-box .p-main__resolution-card-block .p-main__resolution-card-img-box {
     height: 154px;
     margin-bottom: 40px;
-    margin-top: 0;
+    margin-top: 40px;
   }
 }
 
@@ -6769,4 +6769,10 @@ section.top_problem .block {
     padding-bottom: 30px;
     padding-top: 0px;
   }
+}
+
+
+table tr th,
+table tr td {
+        display: table-cell;
 }
