--- a/css/style.css
+++ b/css/style.css
@@ -3840,6 +3840,24 @@ body.privacy #privacy .date {
   }
 }
 
+@media screen and (max-width: 1100px) {
+  .top #member {
+    padding: 0 110px;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .top #member {
+    padding: 0 20px;
+  }
+}
+
+@media screen and (max-width: 769px) {
+  .top #member {
+    padding: 0;
+  }
+}
+
 @media screen and (min-width: 769px) {
   #member .list-member {
     padding: 0 100px;
