--- a/style.css
+++ b/style.css
@@ -12,6 +12,45 @@
   text-align: justify;
 }
 
+@media screen and (min-width: 1024px) {
+  .message_contents_wrap_txt p {
+    font-size: max(1.15vw, 14px);
+    line-height: 2em;
+    font-weight: 400;
+    letter-spacing: 1.2px;
+    text-align: justify;
+  }
+}
+@media screen and (min-width: 1477px) {
+  .message_contents_wrap_txt p {
+    font-size: max(1.15vw, 16px);
+    line-height: 2em;
+    font-weight: 400;
+    letter-spacing: 1.2px;
+    text-align: justify;
+  }
+}
+
+@media screen and (min-width: 1597px) {
+  .message_contents_wrap_txt p {
+    font-size: max(1.20vw, 16px);
+    line-height: 2em;
+    font-weight: 400;
+    letter-spacing: 1.2px;
+    text-align: justify;
+  }
+}
+
+@media screen and (min-width: 1990px) {
+  .message_contents_wrap_txt p {
+    font-size: max(1.24vw, 16px);
+    line-height: 2em;
+    font-weight: 400;
+    letter-spacing: 1.2px;
+    text-align: justify;
+  }
+}
+
 @media screen and (min-width: 1000px) {
   .mb_25_pc {
     margin-bottom: 25px;
