--- a/style.css
+++ b/style.css
@@ -21,6 +21,17 @@
     text-align: justify;
   }
 }
+
+@media screen and (min-width: 1440px) {
+  .message_contents_wrap_txt p {
+    font-size: max(1.13vw, 16px);
+    line-height: 2em;
+    font-weight: 400;
+    letter-spacing: 1.2px;
+    text-align: justify;
+  }
+}
+
 @media screen and (min-width: 1477px) {
   .message_contents_wrap_txt p {
     font-size: max(1.15vw, 16px);
